fix layout on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -6,6 +6,7 @@
 
 body {
     overflow-x: hidden;
+    font-size: 20px;
 }
 
 p,ul,li {
@@ -84,18 +85,18 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
-    background: #{{ site.color.primary }};
+    background: #fff;
+    color: #{{ site.color.secondary }};
 }
 
 header .container {
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 50px;
 }
 
 header img {
     display: block;
-    margin: 0 auto 20px;
+    margin: 0 auto 40px;
 }
 
 header .intro-text .name {
@@ -122,7 +123,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .skills {
-        font-size: 1.75em;
+        #font-size: 1.75em;
     }
 }
 
@@ -375,6 +376,7 @@ form .row:first-child .floating-label-form-group {
 
 footer {
     color: #fff;
+   font-size: 0.75em;   
 }
 
 footer h3 {
